--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,4 +1,6 @@
 /node_modules
+/public/js
+/public/css
 /public/hot
 /public/storage
 /storage/*.key
@@ -11,3 +13,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 _ide_helper.php
+yarn.lock
