--- a/app/.babelrc
+++ b/app/.babelrc
@@ -8,7 +8,8 @@
                     "firefox": "60",
                     "chrome": "67",
                     "safari": "11.1",
-                    "ie": "10"
+                    "android": "5.1",
+                    "ios": "12.4"
                 },
                 "useBuiltIns": "usage",
                 "debug": true,
