--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "axios": "^0.19",
+    "browser-sync": "^2.26.13",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "core-js": "^3.6.4",
     "cross-env": "^7.0",
     "laravel-mix": "^5.0.1",
@@ -18,6 +20,8 @@
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.15.2",
     "sass-loader": "^8.0.0",
+    "ts-loader": "^8.0.13",
+    "typescript": "^4.1.3",
     "vue-template-compiler": "^2.6.11"
   },
   "name": "interactive-map",
@@ -27,6 +31,6 @@
     "test": "tests"
   },
   "author": "Gekkone <sergej.soloyov@yandex.ru> (https://github.com/gekkone)",
-  "license": "Creative Commons «Attribution-NonCommercial-ShareAlike» 3.0",
+  "license": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License",
   "description": "Game"
 }
